# AlbergueMunicipalCarrascalejo

./: .actrc  .env.ports  .gitignore  .ports.json  .replit  .secrets  COVERAGE_AND_ACT_GUIDE.md  Cargo.toml  LANGUAGE_SELECTOR_IMPROVEMENTS.md  README.md  Taskfile.yml  build_helper.sh  database.tree.txt  flake.nix  frontend.tree.txt  gateway.tree.txt  package.json  ports.json  project-tree.txt  replit.nix  runtime-config.example.toml  spin.toml
backend/: Cargo.toml  Justfile  README.md  Taskfile.yml  run_all_tests.sh  runtime-config.toml  verify_tests.sh
backend/auth-service/: Cargo.toml  README.md  index.ts  package.json  spin.toml
backend/auth-service/app/src/: App.tsx  index.css
backend/auth-service/src/: App.tsx  config.rs  handlers.rs  lib.rs  main.rs
backend/auth-service/src/providers/: github.rs  logto.rs  mod.rs  zitadel.rs
backend/booking-service/: Cargo.toml  spin.toml
backend/booking-service/src/: lib.rs
backend/booking-service/src/adapters/: console_notification_sender.rs  memory_booking_repository.rs  mod.rs
backend/booking-service/src/application/: create_booking.rs  mod.rs
backend/booking-service/src/ports/: booking_repository.rs  mod.rs  notification_sender.rs
backend/booking-service/tests/: booking_service_test.rs  spin_test.rs
backend/country_cache_service/: Cargo.toml  spin.toml
backend/country_cache_service/src/: lib.rs
backend/country_cache_service/tests/: lib.rs
backend/document-validation-service/: Cargo.toml  spin.toml
backend/document-validation-service/src/: lib.rs
backend/document-validation-service/src/adapters/: mod.rs
backend/document-validation-service/src/application/: mod.rs  validation_service.rs
backend/document-validation-service/src/infrastructure/: mod.rs
backend/document-validation-service/src/ports/: mod.rs
backend/document-validation-service/tests/: mod.rs
backend/info-on-arrival-service/: Cargo.toml  spin.toml
backend/info-on-arrival-service/content/: README.md  car-rentals.json  eat.json  taxis.json
backend/info-on-arrival-service/src/: lib.rs  main.rs
backend/info-on-arrival-service/src/adapters/: mod.rs
backend/info-on-arrival-service/src/application/: cards_service.rs  mod.rs
backend/info-on-arrival-service/src/domain/: card.rs  mod.rs
backend/info-on-arrival-service/src/infrastructure/: config.rs  server.rs
backend/info-on-arrival-service/src/ports/: mod.rs  scraper_port.rs  storage_port.rs
backend/info-on-arrival-service/tests/: integration_tests.rs  unit_tests.rs
backend/location-service/: Cargo.toml  TESTING.md  run_tests.sh  spin.toml
backend/location-service/src/: handlers.rs  lib.rs  models.rs  service.rs
backend/location-service/tests/: integration_tests.rs  unit_tests.rs
backend/mqtt-broker-service/: Cargo.toml  README.md  spin.toml
backend/mqtt-broker-service/src/: lib.rs
backend/notification-service/: Cargo.toml  build.rs  spin.toml
backend/notification-service/src/: lib.rs  main.rs
backend/notification-service/src/adapters/: mod.rs
backend/notification-service/src/application/: mod.rs  notification_service.rs
backend/notification-service/src/domain/: mod.rs  notification.rs
backend/notification-service/src/infrastructure/: config.rs  mod.rs  server.rs
backend/notification-service/src/ports/: email_port.rs  mod.rs  sms_port.rs  telegram_port.rs
backend/notification-service/tests/: integration_tests.rs  spin_test.rs  unit_tests.rs
backend/rate-limiter-service/: Cargo.toml  TESTING.md  run_tests.sh  spin.toml  test_standalone.sh
backend/rate-limiter-service/src/: lib.rs
backend/rate-limiter-service/tests/: edge_case_tests.rs  integration_tests.rs  performance_tests.rs  rate_limit_algorithm_tests.rs  test_utils.rs  unit_tests.rs
backend/redis-cache-service/: Cargo.toml
backend/redis-cache-service/src/: lib.rs
backend/redis-service/: Cargo.toml  TESTING.md  run_tests.sh  spin.toml
backend/redis-service/src/: error.rs  lib.rs  models.rs  service.rs
backend/redis-service/tests/: unit_tests.rs
backend/redis_service/: Cargo.toml  TESTING.md  run_tests.sh  spin.toml
backend/redis_service/src/: error.rs  lib.rs  models.rs  service.rs
backend/redis_service/tests/: unit_tests.rs
backend/reviews-service/: Cargo.toml  spin.toml
backend/reviews-service/src/: lib.rs  main.rs
backend/reviews-service/tests/: lib.rs
backend/scripts/: start-all-services.sh  stop-all-services.sh
backend/security-service/: Cargo.toml  spin.toml
backend/security-service/src/: lib.rs
backend/services/: country-cache.ts  redis-client.ts
backend/services/country_cache_service/: Cargo.toml
backend/services/country_cache_service/src/: lib.rs
backend/services/redis_service/: Cargo.toml
backend/services/redis_service/src/: lib.rs
backend/shared/: Cargo.toml
backend/shared/src/: config.rs  db.rs  dto.rs  error.rs  event_publisher.rs  events.rs  lib.rs  webhook_handler.rs
backend/validation-service/: Cargo.toml  spin.toml
backend/validation-service/src/: lib.rs
backend/validation-service/tests/: mod.rs
domain_model/rust/: Cargo.toml  Justfile
gateway/: Caddyfile  Cargo.toml  Justfile  README.md  spin.toml
gateway/api/: Cargo.toml
gateway/api-gateway/: Cargo.toml
gateway/api-gateway-core/: Cargo.toml
gateway/api-gateway-core/src/: lib.rs
gateway/api-gateway-core/tests/: config_load_test.rs  rewrite_path_test.rs
gateway/api-gateway/config/: gateway.toml
gateway/api-gateway/src/: auth.rs  cache.rs  circuit_breaker.rs  context.rs  events.rs  gateway_config.rs  lib.rs  rate_limit.rs  rejection.rs  security_headers.rs  telemetry.rs  util.rs
gateway/api-gateway/tests/: config_load_test.rs  rewrite_path_test.rs
gateway/api/src/: auth_verify.rs  backend_client.rs  lib.rs  mod.rs
gateway/api/src/auth_service/: lib.rs
gateway/bff/: Cargo.toml
gateway/bff/src/: auth_verify.rs  lib.rs  mod.rs
gateway/bff/tests/: lib.rs
gateway/edge-proxy/: Cargo.toml
gateway/edge-proxy/src/: lib.rs  main.rs
gateway/edge-proxy/tests/: rewrite_uri_test.rs
tests/integration/: Cargo.toml  Justfile  gateway_integration_test.rs  mod.rs
(+1139 files in other folders)
