[workspace]
members = [
    "backend/shared",
    "backend/booking-service",
    "backend/notification-service",
    "backend/reviews-service", 
    "backend/security-service",
    "backend/validation-service",
    "backend/info-on-arrival-service",
    "backend/location-service",
    "backend/rate-limiter-service",
    "backend/auth-service"
]

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
spin-sdk = "2.1"
wit-bindgen = "0.25"
http = "1.1"
sqlx = { version = "0.7", features = ["postgres", "chrono", "uuid"] }
thiserror = "1.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

# Cargo aliases for deployment
[workspace.metadata.commands]
local = "spin up --listen 0.0.0.0:3000"
build-all = "cargo build --target wasm32-wasi --release --workspace --exclude shared"
prod = "spin login && spin deploy --registry ghcr.io"
test-all = "./scripts/test-all-services.sh"