[workspace]
resolver = "2"
members = [
  "shared",
  "booking-service",
  "notification-service",
  "reviews-service",
  "security-service",
  "document-validation-service",
  "info-on-arrival-service",
  "location-service",
  "rate-limiter-service",
  "auth-service",
  "redis-service",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
# Common dependencies for all services
spin-sdk = "2.1"
wit-bindgen = "0.25"
http = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt", "macros", "time"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# Testing dependencies
http-body-util = "0.1"
tower = "0.4"
tower-service = "0.3"
hyper = "1.0"
hyper-util = "0.1"

## Profiles are not supported under [workspace]; remove to silence warnings.
