[workspace]
resolver = "2"
members = [
  "shared",
  "booking-service",
  "notification-service",
  "reviews-service",
  "security-service",
  "document-validation-service",
  "info-on-arrival-service",
  "location-service",
  "rate-limiter-service",
  "auth-service",
  "redis-service",
  "mqtt-broker-service",
]

[workspace.package]
edition = "2021"

[workspace.metadata.rust-analyzer]
checkOnSave = { command = "clippy" }
cargo = { allFeatures = true }

[workspace.metadata.clippy]
# Intended default policy for editor/CI usage; run as:
# cargo clippy --workspace --all-targets --all-features -- -D warnings
deny = ["warnings"]
all_targets = true
all_features = true

[workspace.dependencies]
# Common dependencies for all services
spin-sdk = "5.1.1"
wit-bindgen = "0.51.0"
http = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.100"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["sync", "macros", "time"] }
futures = "0.3.31"
chrono = { version = "0.4.43", features = ["serde"] }

# Testing dependencies
http-body-util = "0.1.3"
tower = "0.5.3"
tower-service = "0.3.3"
hyper = "1.8.1"
hyper-util = "0.1.19"

## Profiles are not supported under [workspace]; remove to silence warnings.
