[workspace]
members = ["api-gateway", "edge-proxy"]
resolver = "2"

[workspace.metadata.rust-analyzer]
# Make rust-analyzer analyze all workspace members and run checks via Clippy
cargo = { allFeatures = true, loadOutDirsFromCheck = true }
check = { command = "clippy" }

[workspace.metadata.env]
# Spin Gateway Configuration
SPIN_LISTEN_ADDRESS = { default = "0.0.0.0:3000", description = "Gateway listen address" }
GATEWAY_PORT = { default = "3000", description = "Gateway port" }

# Gateway Policies
gateway_config_path = { default = "/config/gateway.toml", description = "Gateway TOML policy config path" }

# Redis Configuration
redis_address = { default = "", description = "Redis connection address for caching/rate-limit/circuit-breaker" }

# Database Configuration
DATABASE_URL = { required = true, description = "PostgreSQL connection string" }
NEON_DATABASE_URL = { required = true, description = "Neon database connection string" }

# Auth Configuration
AUTH0_DOMAIN = { required = true, description = "Auth0 tenant domain" }
AUTH0_CLIENT_ID = { required = true, description = "Auth0 client ID" }
AUTH0_CLIENT_SECRET = { required = true, description = "Auth0 client secret" }

[workspace.metadata.scripts]
# Build commands
build = "cargo build --workspace --release --target wasm32-wasi"
build-spin = "spin build"
build-all = "cargo build --workspace --release --target wasm32-wasi && spin build"

# Development commands
dev = "spin up --listen ${SPIN_LISTEN_ADDRESS:-0.0.0.0:3000}"
dev-with-caddy = "spin up --listen 127.0.0.1:3000 & cd gateway && caddy run --config Caddyfile"

# Deployment commands
deploy = "cargo build --workspace --release --target wasm32-wasi && spin build && spin deploy"
deploy-local = "cargo build --workspace --release --target wasm32-wasi && spin build && spin up --listen ${SPIN_LISTEN_ADDRESS:-0.0.0.0:3000}"
deploy-prod = "cargo build --workspace --release --target wasm32-wasi && spin build && spin login && spin deploy"

# Testing and validation
test-gateway = "spin up --listen 127.0.0.1:3000 & sleep 2 && curl http://127.0.0.1:3000/api/ping"

[workspace.dependencies]
tokio = { version = "1.0", features = [
  "sync",
  "macros",
  "io-util",
  "rt",
  "time",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
spin-sdk = "5.1.1"
anyhow = "1.0.100"
http = "1.4.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
thiserror = "2.0.17"

[workspace.metadata.commands]
build-wasm = "cargo build --target wasm32-wasi --release"
test-all = "cargo test --workspace"

