[package]
name = "auth"
authors = ["Guillermo Lam <guillermolam.m@gmail.com>"]
description = "OIDC and OAuth2 Service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "auth"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8"
openidconnect = "3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spin-sdk = { version = "2.2.0", features = ["http"] }
tokio = { version = "1", features = ["macros", "rt"] }
tower = "0.4"
url = "2"
uuid = { version = "1", features = ["v4"] }
