[package]
name = "country_cache_service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
redis-service = { path = "../redis_service" }
spin-sdk = { version = "2.1", features = ["http"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.32", features = ["full"], default-features = false }
mockall = "0.11"
assert_matches = "1.0"

[package.metadata.env]
REDIS_URL = { required = true }

[package.metadata]
coverage = true

[build-dependencies]
tarpaulin = "0.20.0"

[profile.test]
opt-level = 0
debug = true
overflow-checks = true
lto = false