[package]
name = "document-validation-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.17"

# Async runtime (wasm-compatible features only)
tokio = { version = "1.0", features = ["sync", "macros", "io-util", "time"] }
futures = "0.3"

# Spin SDK
spin-sdk = "5.1.1"
wit-bindgen = "0.51.0"

# HTTP
http = "1.1"

# Shared
shared = { path = "../shared" }

[dev-dependencies]
tokio = { version = "1.0", features = ["sync", "macros", "io-util", "time"] }
