[package]
name = "location-service"
version = "0.2.0"
edition = "2021"

[dependencies]
# Core dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["rt", "macros", "sync", "time"] }
futures = "0.3"

# Spin SDK
spin-sdk = "2.1"
wit-bindgen = "0.25"

# HTTP
http = "1.1"

# Database
sqlx = { version = "0.7", features = [
  "postgres",
  "chrono",
  "uuid",
  "runtime-tokio",
] }

# Redis
redis-service = { path = "../redis-service" }

# Shared
shared = { path = "../shared" }

[dev-dependencies]
tokio = { version = "1.0", features = [
  "rt",
  "macros",
  "sync",
  "time",
  "test-util",
] }
wiremock = "0.5"
mockall = "0.11"
