[package]
name = "location-service"
version = "0.2.0"
edition = "2021"

[dependencies]
# Core dependencies
anyhow = "1.0.100"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
thiserror = "2.0.17"

# Async runtime (wasm-compatible features only)
tokio = { version = "1.49.0", features = ["sync", "macros", "time"] }
futures = "0.3"

# Spin SDK
spin-sdk = "5.1.1"
wit-bindgen = "0.51.0"

# HTTP
http = "1.1"


# Redis
redis-service = { path = "../redis-service" }

# Shared
shared = { path = "../shared" }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "sync", "time"] }
wiremock = "0.6.5"
mockall = "0.14.0"
