[package]
name = "notification-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = [
  "sync",
  "macros",
  "io-util",
  "rt",
  "time",
] }
futures = "0.3"

# Spin SDK
spin-sdk = "2.1"
wit-bindgen = "0.25"

# HTTP
http = "1.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", features = ["json"] }
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }

# Async trait
async-trait = "0.1"

# Shared
shared = { path = "../shared" }

[dev-dependencies]
tokio = { version = "1.0", features = [
  "sync",
  "macros",
  "io-util",
  "rt",
  "time",
  "test-util",
] }
