[package]
name = "rate-limiter-service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.env]
# Rate Limiting Configuration
RATE_LIMIT_REQUESTS = { default = "100", description = "Requests per minute limit" }
RATE_LIMIT_WINDOW_SECONDS = { default = "60", description = "Rate limit window in seconds" }
RATE_LIMIT_BURST = { default = "20", description = "Burst limit for rate limiting" }

# Redis Configuration (if using external storage)
REDIS_URL = { required = false, description = "Redis connection string for rate limit storage" }

# Service Configuration
LOG_LEVEL = { default = "info", description = "Application log level" }

[dependencies]
# Spin SDK for WASM components
spin-sdk = "5.1.1"
wit-bindgen = "0.51.0"

# HTTP and web
http = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Shared dependencies
shared = { path = "../shared" }

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.0", features = ["rt", "macros", "time"] }
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros", "time", "test-util"] }
serde_json = "1.0"
http-body-util = "0.1"
tower = "0.5.3"
tower-service = "0.3"
hyper = "1.0"
hyper-util = "0.1"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[[test]]
name = "unit_tests"
path = "tests/unit_tests.rs"

[[test]]
name = "rate_limit_algorithm_tests"
path = "tests/rate_limit_algorithm_tests.rs"

[[test]]
name = "edge_case_tests"
path = "tests/edge_case_tests.rs"

[[test]]
name = "performance_tests"
path = "tests/performance_tests.rs"
