[package]
name = "redis-cache-service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spin-sdk = { version = "3.0", features = [
  "http",
  "redis-outbound",
  "variables",
] }
chrono = { version = "0.4", features = ["serde"] }
