[package]
name = "redis-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = [
  "sync",
  "macros",
  "io-util",
  "rt",
  "time",
] }
futures = "0.3"

# Redis
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }

# Spin SDK
spin-sdk = "2.1"
wit-bindgen = "0.25"

# HTTP
http = "1.1"

# Shared
shared = { path = "../shared" }

[dev-dependencies]
tokio = { version = "1.0", features = [
  "sync",
  "macros",
  "io-util",
  "rt",
  "time",
  "test-util",
] }
