[package]
name = "redis-service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.env]
# Redis Configuration
REDIS_URL = { required = true, description = "Redis connection URL" }
REDIS_MAX_CONNECTIONS = { default = "10", description = "Maximum Redis connections" }
REDIS_CONNECTION_TIMEOUT = { default = "5", description = "Connection timeout in seconds" }
REDIS_DEFAULT_TTL = { default = "3600", description = "Default TTL in seconds" }

# Service Configuration
LOG_LEVEL = { default = "info", description = "Application log level" }

[dependencies]
# Spin SDK for WASM components
spin-sdk = { version = "2.1", features = ["http"] }
wit-bindgen = "0.25"

# Redis client
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }

# HTTP and web
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["rt", "macros"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
wiremock = "0.5"
mockall = "0.11"

[[test]]
name = "unit_tests"
path = "tests/unit_tests.rs"

[package.metadata.component]
package = "component:redis-service"