
[package]
name = "security-service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.env]
# Security Configuration
ENCRYPTION_KEY = { required = true, description = "AES-256-GCM encryption key" }
SECURITY_SCAN_TIMEOUT = { default = "30", description = "Security scan timeout in seconds" }
THREAT_DB_UPDATE_INTERVAL = { default = "3600", description = "Threat database update interval in seconds" }

# Service Configuration
LOG_LEVEL = { default = "info", description = "Application log level" }

[dependencies]
# Spin SDK for WASM components
spin-sdk = "2.1"
wit-bindgen = "0.25"

# HTTP and web
http = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security and crypto
regex = "1.10"
base64 = "0.21"

# Shared dependencies
shared = { path = "../shared" }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
