[workspace]
resolver = "2"
members = [
  "crates/domain",
  "crates/persistence",
  "crates/migration",
  "crates/seaography",
  "crates/turso-sync",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
libsql = "0.6"
rust_decimal = { version = "1", features = ["serde"] }
sea-orm = { version = "=2.0.0-rc.27", default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite", "with-chrono", "with-rust_decimal"] }
sea-orm-migration = { version = "=2.0.0-rc.27", default-features = false, features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

