[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.8"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
once_cell = "1.21.3"

# Spin SDK (no features needed - functionality is built-in)
spin-sdk = "5.1.1"
http = "1.4.0"
bytes = "1.11.0"

# JWT & Crypto
base64 = "0.22.1"
ring = "0.17.14"
regex = "1.12.2"

# HTTP handled by spin-sdk

# Logging
log = "0.4.29"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["fmt"] }

[dev-dependencies]
proptest = "1.9.0"

