[package]
name = "bff"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = [
  "sync",
  "macros",
  "io-util",
  "rt",
  "time",
] }
futures = "0.3"

# Spin SDK
spin-sdk = "3.0"
wit-bindgen = "0.25"

# HTTP
http = "0.2"

# Shared
shared = { path = "../../backend/shared" }

[dev-dependencies]
tokio = { version = "1.0", features = [
  "sync",
  "macros",
  "io-util",
  "rt",
  "time",
  "test-util",
] }
