[package]
name = "bff"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core dependencies
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
thiserror = "2.0.17"

# Async runtime
tokio = { version = "1.0", features = [
  "sync",
  "macros",
  "io-util",
  "rt",
  "time",
] }
futures = "0.3.31"

# Spin SDK
spin-sdk = "5.1.1"
wit-bindgen = "0.51.0"

# HTTP
http = "1.4.0"

# Shared
shared = { path = "../../backend/shared" }

[dev-dependencies]
tokio = { version = "1.49.0", features = [
  "sync",
  "macros",
  "io-util",
  "rt",
  "time",
  "test-util",
] }
