[package]
name = "bff"
version = "0.1.0"
edition = "2021"

[lib]
name = "bff"
crate-type = ["cdylib"]

[package.metadata.env]
# Auth Configuration
AUTH0_DOMAIN = { required = true }
AUTH0_CLIENT_ID = { required = true }
AUTH0_CLIENT_SECRET = { required = true }

# Database Configuration
DATABASE_URL = { required = true }
NEON_DATABASE_URL = { required = true }

# Security
ENCRYPTION_KEY = { required = true }
JWT_SECRET = { required = true }

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
spin-sdk = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
mockall = "0.11"
tempfile = "3.0"
speculoos = "0.11"
httpc-test = "0.1"
reqwest = { version = "0.11", features = ["json"] }

[features]
default = []
test-utils = []