[package]
name = "bff"
version = "0.1.0"
edition = "2021"

[lib]
name = "bff"
crate-type = ["cdylib"]

[package.metadata.env]
# Auth Configuration
AUTH0_DOMAIN = { required = true }
AUTH0_CLIENT_ID = { required = true }
AUTH0_CLIENT_SECRET = { required = true }

# Database Configuration
DATABASE_URL = { required = true }
NEON_DATABASE_URL = { required = true }

# Security
ENCRYPTION_KEY = { required = true }
JWT_SECRET = { required = true }

[dependencies]
anyhow = "1.0"
spin-sdk = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
speculoos = "0.11"
tokio-test = "0.4"
wiremock = "0.5"
mockall = "0.11"
tempfile = "3.0"
httpc-test = "0.1"
reqwest = { version = "0.11", features = ["json"] }

[features]
default = []
test-utils = []