
[package]
name = "gateway-integration-tests"
version = "0.1.0"
edition = "2021"

[[test]]
name = "gateway_integration_test"
path = "gateway_integration_test.rs"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
speculoos = "0.11"
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"

[dev-dependencies]
tokio-test = "0.4"
