[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.0", features = [
  "sync",
  "macros",
  "io-util",
  "rt",
  "time",
  "test-util",
] }
futures = "0.3"

# HTTP
http = "1.1"
reqwest = { version = "0.11", features = ["json"] }

# Testing
tokio-test = "0.4"
wiremock = "0.5"

# Shared
shared = { path = "../backend/shared" }

# Testing assertions
speculoos = "0.11"
