[package]
name = "country_cache_service"
version = "0.1.0"
edition = "2024"

[dependencies]
redis_service = { path = "../redis_service" }
spin-sdk = { version = "2.1", features = ["http"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.32", features = ["full"], default-features = false }
mockall = "0.11"
assert_matches = "1.0"

