[package]
name = "redis_service"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { version = "0.23" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
spin-sdk = { version = "2.1", features = ["http"] }

[dev-dependencies]
tokio = { version = "1.32", features = ["full"], default-features = false }
mockall = "0.11"
assert_matches = "1.0"

